--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,11 @@
                 <artifactId>netty-websocket-spring-boot-starter</artifactId>
                 <version>0.7.3</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.54</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
