--- a/mapper/src/main/resources/application.properties
+++ b/mapper/src/main/resources/application.properties
@@ -1,1 +1,40 @@
+#tomcat访问端口
+#server.port=8087
+#server.servlet.context-path=/clinbrain/api
+#server.servlet.thread-context-inheritable=true
+#日志
+logging.level.tk.mybatis=TRACE
 
+#数据源配置信息
+datasource.initialSize=5
+datasource.minIdle=5
+datasource.maxActive=20
+datasource.testOnBorrow=true
+datasource.filters=stat,wall
+#数据源名称
+jdbc.datasources=ds,ds1
+
+#从数据源1
+jdbc.ds.type=com.alibaba.druid.pool.DruidDataSource
+jdbc.ds.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.ds.url=jdbc:mysql://192.168.0.111:3306/test?characterEncoding=utf-8&useSSL=false
+jdbc.ds.username=root
+jdbc.ds.password=root
+
+jdbc.ds1.type=com.alibaba.druid.pool.DruidDataSource
+jdbc.ds1.driverClassName=com.mysql.jdbc.Driver
+jdbc.ds1.url=jdbc:mysql://192.168.5.149:3306/tao?characterEncoding=utf-8&useSSL=false
+jdbc.ds1.username=root
+jdbc.ds1.password=123456
+
+mybatis.type-aliases-package=com.mywuwu.gameserver.mapper.entity
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mapper.mappers=com.mywuwu.gameserver.mapper.common.mapper.MyMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+#分页配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count\=countSql
