--- a/webserver/pom.xml
+++ b/webserver/pom.xml
@@ -40,7 +40,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.mywuwu.gameserver</groupId>
+            <artifactId>mapper</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
