--- a/mapper/src/main/resources/application.properties
+++ b/mapper/src/main/resources/application.properties
@@ -24,9 +24,9 @@ jdbc.ds.password=le5201314
 
 jdbc.ds1.type=com.alibaba.druid.pool.DruidDataSource
 jdbc.ds1.driverClassName=com.mysql.jdbc.Driver
-jdbc.ds1.url=jdbc:mysql://192.168.5.149:3306/tao?characterEncoding=utf-8&useSSL=false
+jdbc.ds1.url=jdbc:mysql://192.168.2.150:3306/tao?characterEncoding=utf-8&useSSL=false
 jdbc.ds1.username=root
-jdbc.ds1.password=123456
+jdbc.ds1.password=le5201314
 
 mybatis.type-aliases-package=com.mywuwu.gameserver.mapper.entity
 mybatis.mapper-locations=classpath*:mapper/*.xml
