--- a/yingsanzhangserver/src/main/resources/application.yml
+++ b/yingsanzhangserver/src/main/resources/application.yml
@@ -7,6 +7,13 @@ spring:
     host: 192.168.6.122
     port: 6379
     password:
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        max-wait: -1ms
+        min-idle: 0
+    timeout: 100ms
 logicserver:
   name: yingsanzhang
   connector: hallserver
