添加牛牛服务

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>data</module>
         <module>card</module>
         <module>mapper</module>
+        <module>niuniuserver</module>
     </modules>
     <packaging>pom</packaging>
 
