--- a/hallserver/src/main/resources/application.yml
+++ b/hallserver/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       host: localhost
       port: 27017
   redis:
-    host: 192.168.6.122
+    host: 192.168.2.150
     port: 6379
     password:
 hall:
@@ -16,7 +16,7 @@ hall:
     2: yingsanzhang
     3: paodekuai
     4: baijiale
-    5: douniu
+    5: niuniu
   name: hallserver
 netty-websocket:
   host: 192.168.6.248
