--- a/niuniuserver/pom.xml
+++ b/niuniuserver/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.mywuwu.gameserver</groupId>
             <artifactId>core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
