--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.54</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
