--- a/yingsanzhangserver/pom.xml
+++ b/yingsanzhangserver/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.mywuwu.gameserver</groupId>
             <artifactId>core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -58,7 +62,7 @@
         </dependency>
         <dependency>
             <groupId>com.mywuwu.gameserver</groupId>
-            <artifactId>data</artifactId>
+            <artifactId>mapper</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
