添加牛牛服务

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.mywuwu.gameserver</groupId>
     <artifactId>core</artifactId>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
