--- a/mapper/src/main/resources/application.properties
+++ b/mapper/src/main/resources/application.properties
@@ -16,11 +16,16 @@ jdbc.datasources=ds,ds1
 
 #从数据源1
 jdbc.ds.type=com.alibaba.druid.pool.DruidDataSource
-jdbc.ds.driverClassName=com.mysql.jdbc.Driver
-  #com.mysql.cj.jdbc.Driver
-jdbc.ds.url=jdbc:mysql://localhost:3306/mywuwu?characterEncoding=utf-8&useSSL=false
-jdbc.ds.username=root
-jdbc.ds.password=le5201314
+jdbc.ds.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.ds.url=jdbc:mysql://106.12.92.171:3306/T112233?characterEncoding=utf-8&useSSL=false
+jdbc.ds.username=T112233
+jdbc.ds.password=T332211
+
+#jdbc.ds.type=com.alibaba.druid.pool.DruidDataSource
+#jdbc.ds.driverClassName=com.mysql.cj.jdbc.Driver
+#jdbc.ds.url=jdbc:mysql://localhost:3306/mywuwu?characterEncoding=utf-8&useSSL=false
+#jdbc.ds.username=root
+#jdbc.ds.password=le5201314
 
 jdbc.ds1.type=com.alibaba.druid.pool.DruidDataSource
 jdbc.ds1.driverClassName=com.mysql.jdbc.Driver
