--- a/webserver/pom.xml
+++ b/webserver/pom.xml
@@ -24,10 +24,10 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.mywuwu.gameserver</groupId>
             <artifactId>core</artifactId>
@@ -41,7 +41,7 @@
 
         <dependency>
             <groupId>com.mywuwu.gameserver</groupId>
-            <artifactId>mapper</artifactId>
+            <artifactId>data</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
