--- a/webserver/src/main/resources/application.yml
+++ b/webserver/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   data:
     mongodb:
-      host: localhost
+      host: 106.13.39.143
       port: 27017
+      database: mywuwu
   redis:
     host: 192.168.2.150
     port: 6379
